2005-02-04  Nate Nielsen <nielsen@memberwebs.com>

    * src/seahorse-keyserver-search.glade: Adam Schreiber
    made entry field run search on Return keypress
    * libseahorse/seahorse-pgp-source.c:
    * libseahorse/seahorse-util.c:     
    * libseahorse/seahorse-util.h: Monitor keyring and refresh 
    keys automatically when keyring changes.

2005-02-03  Nate Nielsen <nielsen@memberwebs.com>

	* libseahorse/seahorse-util.c: Now prompts for alternate 
	files in the right directory (bug #164962)
	* libseahorse/seahorse-key-store.c:
    * libseahorse/seahorse-key-store.h:
    * src/seahorse-delete.c:
    * src/seahorse-key-manager.c:
    * src/seahorse-keyserver-results.c: Allow deletion of UIDs
    from the main key manager window (bug #164959)
    * libseahorse/seahorse-key-store.c: Fix recipient selection
    status problems (bug #164958)
    * libseahorse/seahorse-gpg-options.c: Relax restriction on 
    GPG versions. Allow any 1.x version. (see bug #166224)
    * libseahorse/seahorse-pgp-source.c: Recognize secret keys
    when imported (bug #164955)
    
2005-02-02  Nate Nielsen <nielsen@memberwebs.com>

	* src/seahorse-key-manager.glade: Patch from Adam Schreiber
	which fixes problems with toolbar.
	
2005-01-29  Nate Nielsen <nielsen@memberwebs.com>

	* pixmaps/seahorse-key.png:
	* pixmaps/seahorse-secret.png: Added support files for Adam's patch.
	* src/seahorse-key-manager-store.c: 
	* libseahorse/seahorse-key-store.c: Some changes to Adam's patch. No icons
	in recipient selection. No icons for UIDs.
	
2005-01-29	Adam Schreiber <sadam@clemson.edu>
	
	* libseahorse/seahorse-key-store.h:
	* libseahorse/seahorse-key-store.c: 
	* pixmaps/Makefile.am: Added Key and Keypair icons to the column view.  
	Sorting on keypair is remembered after close. (bug# 111176)
	
2005-01-22	Adam Schreiber <sadam@clemson.edu>

	* src/seahorse-key-manager.glade: Added bindings for the delete and 
	backspace keys (bug# 164960)
	
2005-01-22  Nate Nielsen <nielsen@memberwebs.com>
