@@ -6,7 +6,9 @@
     * libseahorse/seahorse-util.c:     
     * libseahorse/seahorse-util.h: Monitor keyring and refresh 
     keys automatically when keyring changes.
-
+    * src/seahorse-key-manager.c: Remove extra key list refreshes.
+    Key source takes care of refreshing keys
+    
 2005-02-03  Nate Nielsen <nielsen@memberwebs.com>
 
 	* libseahorse/seahorse-util.c: Now prompts for alternate 
